--- a/display.css
+++ b/display.css
@@ -1,77 +1,54 @@
 *{
     margin: 0;
     padding: 0;
-
+    font-family: sans-serif;
 }
-  table{
-      border-spacing: 0px;
-      width: 100%;
-      margin-top: 2em;
-  }
-  td,th{
-      padding:2em;
-      vertical-align: top;
-      text-align: center;
-      border-top: 1px solid black;
-  }
-  th{
-     background-color: blue;
-     color: white;
-     border-color: greenyellow;
-  }
-  table,thead,tbody,th,td,tr{
-      /* display: block; */
-      padding: 2em;
-  }
-  thead>tr{
-      position: relative;
-      display: flex;
-  
-  }
-  td{
-      border: none;
-      border-bottom: 1px solid black;
-  }
-  td a{
-      padding: 1px;
-  }
-  
-  .s{
-      color: #facaa0;
-  }
-  table{
-      background-color: white; 
-      margin-top: 8em;
-  }
+table{
+    border-spacing: 0px;
+    background-color: white; 
+    margin-top: 2em;
+    width: 100%;
+}
+td,th{
+    padding: 1em;
+    text-align: center;
+}
+th{
+    background-color: rgb(0, 140, 255);
+    color: white;
+}
+td{
+    border-bottom: 1px solid black;
+}
 nav{
-      background-color: blue;
-      position: absolute;
-      width: 100%;
-      height: 5em;
-      text-align: center;
-      text-transform: capitalize;
-      color: white;
-      font-size: larger;
-      top: 0;
-      left: 0;
-      padding: auto;
-
-  }
-  .nav h1{
-    padding-top: auto;
-  }
-  .user{
-    margin-left: 5em;
-    height: 4em;
-
+    background-color: rgb(0, 140, 255);
+    margin: auto;
+    height: 5em;
+    text-align: center;
+    color: white;
+    font-size: larger;
+}
+.user{
+    width: 30vw;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2em;
     border: none;
-
     color: white;
     text-decoration: none;
   }
   .user a{
+    padding-top: 10px;
+    text-align: center;
+    color: black;
     text-decoration: none;
     font-size: large;
-    color: blue;
+    background-color: rgb(0, 140, 255);
+    border-radius: 5px;
+    width: 5em;
+    height: 1.6em;
+  }
+  b{
+    color: white;
   }
 
